# totalcontrol

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
command-config-parser/: README.md
command-config-parser/examples/: commands.json
command-config-parser/src/: config.rs
src/: hotkey.rs  main.rs  temp.rs
